# db

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.node  LAUNCH_GUIDE.md  LICENSE  MESSAGEPACK_INTEGRATION.md  OPTIMIZATION_SUMMARY.md  README.md  SCRIPTS.md  TEST_COVERAGE_REPORT.md  THREAD_POOL_DESIGN.md  antler.rs  antler_cli.rs  async_wrapper.rs  benchmarks.rs  build.zig  build_docker.sh  build_native.sh  build_node_binaries.sh  build_nodejs.sh  create_release.sh  demo.sh  dev.sh  errors.rs  launch.sh  release.sh  release_continue.sh  release_notes.md  run_tests.sh  simple_server_main  start.sh  test_auth.sh  test_compaction.rs  test_concurrent.sh  test_cond.zig  test_debug.zig  test_http.sh  test_node_watching.sh  (+8 more)
bench/: analyze_performance.js  baseline_test.js  batch_test.js  benchmark.js  bottleneck_analysis.js  debug_batch.js  debug_haschild.js  debug_optimization.js  event-benchmark-results.json  event_benchmarks.js  final_debug.js  inspect_keys.js  inspect_lmdb.js  inspect_simple.js  lmdb_state_test.js  manual_lmdb_test.js  minimal_debug.js  msgpack_debug.js  napi_bridge_analysis.js  native_bench.zig  number_test.js  operation_benchmarks.js  package-lock.json  package.json  quick_compare.js  raw_lmdb_vs_elkyn.js  run_benchmarks.js  simple_inspect.js  simple_napi_test.js  simple_object_test.js  simple_test.js  test_optimization.js  test_serialization.js  test_strings_only.js  verify_optimization.js  zig_vs_typescript_comparison.js
benches/: antler_bench.rs
docs/: MEMORY_SAFETY.md
examples/: chat_app.rs
nodejs-bindings/: .gitignore  README.md  auth_only_test.js  basic_test.js  bench_write_queue.js  bench_zero_copy_read.js  binding.gyp  binding.gyp.template  demo.js  index.d.ts  index.js  install.js  jwt_test.js  package.json  sab-queue.js  simple_test.js  test.js  test_clean.js  test_console_check.js  test_event_raw.js  (+8 more)
(+93 files in other folders)
