[package]
name = "antler"
version = "0.1.0"
authors = ["Elkyn"]
edition = "2021"
description = "High-performance Firebase RTDB-like tree store"
repository = "https://github.com/elkyn/antler"
license = "MIT"
keywords = ["database", "tree", "lsm", "firebase", "realtime"]
categories = ["database", "data-structures"]

[dependencies]
# No external dependencies - pure Rust implementation

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[bin]]
name = "antler"
path = "antler.rs"