[package]
name = "antler"
version = "0.1.0"
authors = ["Elkyn"]
edition = "2021"
description = "High-performance Firebase RTDB-like tree store"
repository = "https://github.com/elkyn/antler"
license = "MIT"
keywords = ["database", "tree", "lsm", "firebase", "realtime"]
categories = ["database", "data-structures"]

[dependencies]
tokio = { version = "1.40", features = ["full"] }

[dev-dependencies]
tempfile = "3.12"
rand = "0.8"

[[bench]]
name = "antler_bench"
harness = false
path = "benches/antler_bench.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[lib]
name = "antler"
path = "async_wrapper.rs"

[[bin]]
name = "antler"
path = "antler.rs"